--- a/client/package.json
+++ b/client/package.json
@@ -9,12 +9,13 @@
     "@testing-library/user-event": "^13.1.1",
     "axios": "^1.2.1",
     "bootstrap": "^5.2.3",
+    "jwt-decode": "^3.1.2",
     "nodemon": "^2.0.20",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.3",
-    "react-router-dom": "^5.2.0",
+    "react-router-dom": "^5.3.4",
     "react-scripts": "4.0.3",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
