--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
     "mercadopago": "^1.5.14",
     "morgan": "^1.10.0",
     "node-fetch": "^3.3.0",
+    "nodemailer": "^6.8.0",
     "pg": "^8.5.1",
     "sequelize": "^6.3.5"
   },
