--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,8 @@
     "node-fetch": "^3.3.0",
     "nodemailer": "^6.8.0",
     "pg": "^8.5.1",
+    "qs": "^6.11.0",
+    "request": "^2.88.2",
     "sequelize": "^6.3.5"
   },
   "devDependencies": {
