--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "nodemon": "^2.0.20",
     "prop-types": "^15.8.1",
     "react-dom": "^17.0.2",
+    "react-hot-toast": "^2.4.0",
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.3.4",
     "react-scripts": "4.0.3",
