--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "npm": ">=6.14.6"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^1.12.0",
     "axios": "^1.2.1",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
