--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
     "mercadopago": "^1.5.14",
     "morgan": "^1.10.0",
     "node-fetch": "^3.3.0",
+    "node-localstorage": "^2.2.1",
     "nodemailer": "^6.8.0",
     "pg": "^8.5.1",
     "qs": "^6.11.0",
